20210404

In review of a branch of Karoo being developed by user Richard, Richard advised me of a few nuances that are readidly 
corrected, including a default setting that excluded point mutation (was set to 0% but should be 10%) and several
changes to the User Guide to match the current code base. Richard is working on a version that accepts unary operators
without the current addition of +,-,*,\ as in '+ cos'. We hope to integrate his work soon ...


20210125

This relatively minor update to the code enables compatibility with Python 3.8 and Tensorflow v2.4.1. In the base_class 
the 'branch' array is now defined as an integer to comply with what appears to be a change in Numpy. And finally, the 
director structure is modified in preparation for delivering Karoo GP as a proper pip package.

Thank you Antonio Spadaro and Ezio Melotti for all of your help, guidance, and patience.

Stay tuned for pip install karoo!


2019 06/08

Finally! Full Python 3.6 support!!!

And with this update, a substantial number of improvements and modifications. Most are related to the user interface 
and associated menu. Namely, the (pause) menu is no longer built upon nested loops, therefore the user does not find
him or herself unable to conduct a clean exit. The code that supports the text-based queries is reduced in its 
complexity, and in many cases made more brief. Some re-coloring of the interface text keeps like items in like 
color schemes. Simple, and does not improve performance, but looks better, overall.

"Per my prior note (below), I do appreciate your patience and support, and do look forward to your feedback." --kai 


2019 05/18

"My apology to the users of Karoo GP for the incredible gap between the most recent and this update. My research and 
work have for the past year taken me in other directions. This update marks my return to an active effort in working on 
Karoo, and GP applied to a growing research space. I appreciate your patience and understanding." --kai
