@@ -1,8 +1,5 @@
 # Karoo GP Pause Menu
 # A text-based user interface for mid-run parameter configuration and population studies
-# by Kai Staats, MSc with TensorFlow support provided by Iurii Milovanov; see LICENSE.md
-# pip install package preparation by Antonio Spadaro and Ezio Melotti
-# version 2.4 for Python 3.8
 
 def pause(menu_dict):
 
